--- a/web/src/app.css
+++ b/web/src/app.css
@@ -76,3 +76,17 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+* {
+  box-sizing: border-box;
+}
+.page {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
+  box-sizing: border-box;
+  z-index: 1
+}
